fix(responsive): make featured properties responsive on small breakpoint

--- a/src/styles/components/featured-properties/_featured-properties.scss
+++ b/src/styles/components/featured-properties/_featured-properties.scss
@@ -17,7 +17,7 @@
   }
 
   @media only screen and (max-width: $bp-medium) {
-    top: 4.5rem;
+    top: 6rem;
     right: 50%;
     transform: translate(47%, -50%);
   }
@@ -25,7 +25,7 @@
 
 .featured-properties-card-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
   grid-auto-flow: row dense;
   grid-gap: 4px;
   justify-content: center;
@@ -34,9 +34,8 @@
   padding: 6rem 4px $xl-size;
   font-size: 1.4rem;
 
-
   @media only screen and (max-width: $bp-medium) {
-    padding-top: 8.7rem;
+    padding-top: 12rem;
   }
 }
 
@@ -125,10 +124,25 @@
 .featured-properties-card-list-item:nth-child(9n + 2) {
   grid-column-end: span 2;
   grid-row-end: span 2;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column-end: span 1;
+  }
 }
 
 .featured-properties-card-list-item:nth-child(5n + 5) {
   grid-column-end: span 2;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column-end: span 1;
+    grid-row-end: span 2;
+  }
+}
+
+.featured-properties-card-list-item:nth-child(3n + 7) {
+  @media only screen and (max-width: $bp-medium) {
+    grid-row-end: span 2;
+  }
 }
 
 .bedrooms-group,
